[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.26.0"]
build-backend = "maturin"

[project]
name = "polars-ole"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
